cmd/mimi/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mimi
  annotations:
    operator.1password.io/auto-restart: "true"
spec:
  replicas: 1
  template:
    spec:
      volumes:
        - name: mimi
          secret:
            secretName: mimi
        - name: irc
          secret:
            secretName: irc
        - name: tmp
          emptyDir: {}
        - name: data
          persistentVolumeClaim:
            claimName: mimi
      securityContext:
        fsGroup: 1000
      containers:
        - name: main
          image: ghcr.io/xe/x/mimi:latest
          imagePullPolicy: "Always"
          resources:
            limits:
              cpu: "1"
              memory: "512Mi"
            requests:
              cpu: "500m"
              memory: "256Mi"
          securityContext:
            runAsUser: 1000
            runAsGroup: 1000
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            seccompProfile:
              type: RuntimeDefault
          livenessProbe:
            httpGet:
              path: /healthz
              port: 9002
              httpHeaders:
                - name: X-Kubernetes
                  value: "is kinda okay"
            initialDelaySeconds: 3
            periodSeconds: 3
          volumeMounts:
            - name: mimi
              readOnly: true
              mountPath: "/run/secrets/mimi"
            - name: irc
              readOnly: true
              mountPath: "/run/secrets/irc"
            - name: tmp
              mountPath: "/tmp"
            - name: data
              mountPath: "/data"
