cmd/mimi/manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mimi-public
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
      - mimi.techaro.lol
      secretName: mimi-techaro-lol-public-tls
  rules:
  - host: mimi.techaro.lol
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: mimi
            port: 
              name: http
